Reducing Directs-Group cascade scope

--- a/team/structure/index.html.md.erb
+++ b/team/structure/index.html.md.erb
@@ -228,7 +228,7 @@ Directs-Group is a group made up of a senior leader from each function. These le
 ### Directs-Group Program Objectives
 1. Give greater exposure to E-Group and E-Group decision making to develop leaders with C-level potential
 1. Enlist a larger group of people to help drive and inform key initiatives
-1. Support cascade of information from E-Group to their immediate functional leadership team and determine what should be cascaded to the department
+1. Support cascade of information from E-Group within their teams and functions. This would include cascading to peers on their functional leadership team.
 
 ### Directs-Group Responsibilities
 1. Attend portions of and contribute in designated meetings with E-Group and [E-Group Offsites](https://about.gitlab.com/company/offsite/)
