Add one-off label migration doc to EP handbook page

--- a/quality/engineering-productivity/index.html.md.erb
+++ b/quality/engineering-productivity/index.html.md.erb
@@ -15,7 +15,7 @@ Peak GitLab customer results, efficiently and sustainably delivered by an unencu
 
 ## Mission
 
-Increase GitLab's customer outcomes through efficiency improvements for our entire engineering team. Develop a comprehensive measure of key outcomes and focus on improvements. Measure quality of life, efficiency, and toil reduction improvements in the context of subjective and objective measures. The Engineering Productivity team can't drive efficiency without being efficient ourselves. Measure what matters and focus on that. Build partnerships across organizational boundaries to deliver broad, multi-functional improvements. 
+Increase GitLab's customer outcomes through efficiency improvements for our entire engineering team. Develop a comprehensive measure of key outcomes and focus on improvements. Measure quality of life, efficiency, and toil reduction improvements in the context of subjective and objective measures. The Engineering Productivity team can't drive efficiency without being efficient ourselves. Measure what matters and focus on that. Build partnerships across organizational boundaries to deliver broad, multi-functional improvements.
 
 ## KPIs
 
@@ -83,6 +83,9 @@ graph TD
 {:.no_toc}
 
 #### [Flaky tests](/handbook/engineering/quality/engineering-productivity/flaky-tests/)
+{:.no_toc}
+
+##### [Workflow Automation](/handbook/engineering/quality/engineering-productivity/workflow-automation/)
 {:.no_toc}
 
 #### [Make review apps faster](/handbook/engineering/quality/engineering-productivity/make-review-apps-faster/)
