--- a/quality/index.html.md.erb
+++ b/quality/index.html.md.erb
@@ -336,8 +336,8 @@ The cut-line also serves as a healthy discussion between engineers and their man
 ### Team boards
 {:.no_toc}
 
-- [Dev QE Team](https://gitlab.com/groups/gitlab-org/-/boards/425899)
-- [Ops & Analytics QE Team](https://gitlab.com/groups/gitlab-org/-/boards/978348)
+- [Dev & Analytics QE Team](https://gitlab.com/groups/gitlab-org/-/boards/425899)
+- [Ops QE Team](https://gitlab.com/groups/gitlab-org/-/boards/978348)
 - [Enablement QE Team](https://gitlab.com/groups/gitlab-org/-/boards/978354)
 - [Fulfillment QE Team](https://gitlab.com/groups/gitlab-org/-/boards/1512645)
 - [Sec & Data Science QE Team](https://gitlab.com/groups/gitlab-org/-/boards/1524991)
