--- a/quality/engineering-analytics/index.html.md.erb
+++ b/quality/engineering-analytics/index.html.md.erb
@@ -15,34 +15,26 @@ description: "Engineering Analytics Team"
 
 - - -
 
-## Mission
-
-The goal of the Engineering Analytics team is to build and improve on the data capabilities needed to support a highly productive Engineering Division at GitLab. This team leverages its data analytics expertise and applies that expertise to advancing the most important priorities of Engineering.
-
 ## Vision
 
-The Engineering Analytics team will enhance the Engineering Division by building and evolving operational analytics capabilities so that Engineering can better understand its own internal needs for its end-users, improve cross-department collaboration, and continue to institute industry best practices. 
+Engineering Analytics enables Engineering at GitLab to understand how quickly we are building and evolving our product to meet our customers' needs, and to decide what are the most appropriate balances between cost and effort in building our product.
+
+## Mission
+
+Engineering Analytics is responsible for building and evolving analytics capabilities and creating insights for Engineering to understand how well we are building our product. In this case, "wellness" is measured in terms of efficiency, as well as cost.
 
 Areas of focus and core competencies for Engineering Analytics include:
-* Work with stable counterparts across Engineering to provide actionable insights which ultimately lead to better business outcomes led by Engineering.
-* Provide efficient data analytics and dashboarding capabilities for Engineering leadership, built on top of GitLab’s Data Team's data infrastructure.
-* Collaborate across Engineering departments to find common themes in KPIs and other metrics, and determine the best ways to represent metrics with these shared or common themes.
-* Create new metrics, data analyses, and data visualizations to provide additional clarity for existing operational metrics for Engineering.
-* Propose strategic improvements to Engineering leadership by analyzing trends and behavior in Engineering's KPIs and metrics.
 * Own creation, implementation, optimization, and standardization of the KPIs and metrics for the Engineering Division and its departments.
+* Collaborate across Engineering departments to find common themes in KPIs and other metrics, and determine the best ways to represent metrics with these shared or common themes.
+* Create new metrics, data analyses, and data visualizations to provide additional clarity for existing operational metrics for Engineering, built on top of the data infrastructure provided by GitLab’s Data Team's.
+* Propose strategic improvements to Engineering leadership by analyzing trends and behavior in Engineering's KPIs and metrics.
 
-## Strategy
-
-The plan to enable engineering excellence by leveraging analytics is to:
-* Focus on providing metrics that show a story to Engineering leadership that is actionable
-* Narrow performance indicators to focus on the most important metrics that align with the major themes of each Engineering department
-* Support more efficient Key Reviews for each department with KPIs and metrics in the Handbook
-* Support Engineering departments via stable counterparts by providing more bespoke, granular analysis of day-to-day performance of each department towards its overall mission
-* Consult with Engineering leaders on a regular, frequent basis to understand the strategic objectives for each department, and how Engineering Analytics can help to guide each department towards those strategic objectives
 
 ## Internal Team Responsibilities
+
 In addition to the areas of focus and core competencies listed above, the Engineering Analytics team is continually improving and evolving, in order to keep up with the improvement and evolution of Engineering at GitLab. Areas of focus for the evolution of the team include:
 * Collaborate regularly and frequently with Engineering teams in order to understand how various teams' work aligns with the key objectives for each Department
+* Collaborate regularly with GitLab's Data Team to ensure that the internal data platform for GitLab continues to meet the needs of Engineering and Engineering Analytics
 * Improve our internal team processes so that the Engineering Analytics team can scale along with the rest of Engineering
 * Improve documentation of our team's processes and the outcomes we drive in the Handbook
 
