Fixing broken link

--- a/development/fulfillment/index.html.md.erb
+++ b/development/fulfillment/index.html.md.erb
@@ -149,7 +149,7 @@ Just like with all projects, the items mentioned on the page are subject to chan
 
 Similarly, not all information should be included in the public handbook. Instead, use the [private internal handbook](https://internal-handbook.gitlab.io/) for this SAFE information.
 
-Please reference this documentation about [promising features in future versions](https://docs.gitlab.com/ee/development/documentation/styleguide/#promising-features-in-future-versions) for more information.
+Please reference this documentation about [promising features in future versions](https://docs.gitlab.com/ee/development/documentation/versions.html#promising-features-in-future-versions) for more information.
 
 ### Planning
 
