--- a/development/fulfillment/index.html.md.erb
+++ b/development/fulfillment/index.html.md.erb
@@ -329,7 +329,7 @@ In addition to the approval rules, MRs may require additional reviews as suggest
 2. Security-related issues (such as changes to authentication) require a [Security review](https://about.gitlab.com/handbook/security/security-engineering/application-security/appsec-reviews.html#adding-features-to-the-queue)
 3. Changes to the SFDC APIs require review by the [Sales team](https://about.gitlab.com/handbook/sales/field-operations/sales-systems/)
 4. Changes to the Zuora APIs require review by the [EntApps team](https://about.gitlab.com/handbook/business-technology/enterprise-applications/)
-5. Changes to the user experience require a [UX Review(/handbook/product/ux/product-designer/mr-reviews/)].
+5. Changes to the user experience require a [UX Review](/handbook/product/ux/product-designer/mr-reviews/).
 
 ### Weekly async issue updates
 
