Add Edmond Chan to SA Ride Along drivers

--- a/customer-success/solutions-architects/sa-practices/ride-alongs/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/ride-alongs/index.html.md.erb
@@ -60,6 +60,7 @@ To become a driver, submit an MR to this page adding yourself to the table below
 | **Julie Byrne**        | Americas SMB, Mid-Market     |
 | **Ken McKnight**       | Americas Enterprise West     |
 | **Jefferson Jones**    | Americas SMB, Mid-Market     |
+| **Edmond Chan**.       | Americas Enterprise East.    |
 | **__**                 |                              |
 
 ##### Sync before Call
