Adding direct link to milestone board

--- a/development/fulfillment/index.html.md.erb
+++ b/development/fulfillment/index.html.md.erb
@@ -277,7 +277,7 @@ Links to previous examples. Discussions on prior art. Notice examples of the sim
 
 ### Picking something to work on
 
-Engineers can find and open [the milestone board for Fulfillment](https://gitlab.com/groups/gitlab-org/-/boards/)
+Engineers can find and open [their team's planning issue to check their milestone board](https://gitlab.com/gitlab-org/fulfillment-meta/-/issues/?sort=priority_desc&state=opened&label_name%5B%5D=Planning%20Issue&first_page_size=100)
 and begin working first on those with the `deliverable` label.
 
 It's possible for engineers to pick any of the remaining issues for the milestone once the deliverables are done. If the engineer has no preference, they can choose the next available issue from the top.
